[tool.poetry]
name = "dh-user"
version = "0.1.0"
description = ""
authors = ["JohnSoi <un.perso@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
dh-base = {git = "https://github.com/JohnSoi/dh-base.git"}
dh-auth = {git = "https://github.com/JohnSoi/dh-auth.git"}


[tool.poetry.group.dev.dependencies]
setuptools = "^75.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
