[tool.poetry]
name = "dh-user"
version = "0.1.0"
description = ""
authors = ["JohnSoi <un.perso@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
dh-base = {git = "https://github.com/JohnSoi/dh-base.git"}
dh-auth = {git = "https://github.com/JohnSoi/dh-auth.git"}
dh-contact = {git = "https://github.com/JohnSoi/dh-contact.git"}


[tool.poetry.group.dev.dependencies]
setuptools = "^75.2.0"
black = "^24.10.0"

[tool.isort]
profile="black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
length_sort = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
